--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 01:05:02 2018</p>
+         Last Run: Sat Nov  3 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -32,25 +32,25 @@
                         <td>10:00 AM</td>
                         <td>Overcast</td>
                         <td>1</td>
-                        <td>-1</td>
+                        <td>-2</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>83</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>3</td>
-                        <td>1</td>
+                        <td>Mostly Cloudy</td>
+                        <td>4</td>
+                        <td>2</td>
                         <td>5</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>SW</td>
-                        <td>59</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>6</td>
                         <td>4</td>
                         <td>3</td>
-                        <td>57</td>
+                        <td>59</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
-                 "1",
+                 "-2",
+                 "2",
                  "4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "1",
-                 "3",
+                 "4",
                  "6"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "70",
-                 "57"
+                 "82",
+                 "68",
+                 "59"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "59",
-                 "57"
+                 "80",
+                 "64",
+                 "58"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 01:05:02 2018</p>
+         Last Run: Sat Nov  3 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>4</td>
-                        <td>54</td>
-                        <td>63</td>
+                        <td>53</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
@@ -265,7 +265,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>87</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "54",
+                 "53",
                  "45",
                  "32"
                ]
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
+                 "64",
                  "59",
                  "52"
                ]
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "87",
+                 "86",
                  "86"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 01:05:02 2018</p>
+         Last Run: Sat Nov  3 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>23</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
@@ -475,19 +475,19 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>21</td>
+                        <td>20</td>
                         <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>21</td>
+                        <td>20</td>
                         <td>79</td>
                         <td>0</td>
                         <td>6</td>
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "23",
-                 "21",
-                 "21"
+                 "20",
+                 "20"
                ]
              },
              {
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
+                 "76",
                  "77",
                  "79"
                ]
@@ -613,7 +613,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "96",
+                 "97",
                  "96"
                ]
              }
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 01:05:02 2018</p>
+         Last Run: Sat Nov  3 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
