--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 02:05:03 2018</p>
+         Last Run: Sat Nov  3 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
-                        <td>82</td>
+                        <td>4</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>80</td>
+                        <td>WSW</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,11 +50,11 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>64</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
                         <td>3</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>58</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "4",
                  "5",
                  "3"
                ]
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "68",
                  "59"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "64",
-                 "58"
+                 "79",
+                 "66",
+                 "60"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 02:05:03 2018</p>
+         Last Run: Sat Nov  3 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>4</td>
-                        <td>53</td>
-                        <td>64</td>
+                        <td>51</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
@@ -260,24 +260,24 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>45</td>
-                        <td>59</td>
+                        <td>39</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>86</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Overcast</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>32</td>
-                        <td>52</td>
+                        <td>7</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>NW</td>
-                        <td>86</td>
+                        <td>NNW</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
-                 "45",
-                 "32"
+                 "51",
+                 "39",
+                 "7"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "59",
-                 "52"
+                 "60",
+                 "58",
+                 "53"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "86",
-                 "86"
+                 "87",
+                 "81"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 02:05:03 2018</p>
+         Last Run: Sat Nov  3 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>23</td>
+                        <td>22</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>97</td>
+                        <td>ENE</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>20</td>
-                        <td>77</td>
+                        <td>21</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-4</td>
-                        <td>-7</td>
+                        <td>-5</td>
+                        <td>-8</td>
                         <td>20</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-7"
+                 "-8"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-4"
+                 "-5"
                ]
              }
            ]
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "23",
-                 "20",
+                 "22",
+                 "21",
                  "20"
                ]
              },
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "76",
-                 "77",
-                 "79"
+                 "76",
+                 "77"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "97",
-                 "96"
+                 "95",
+                 "96",
+                 "97"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 02:05:03 2018</p>
+         Last Run: Sat Nov  3 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,9 +679,9 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>64</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
                         <td>4</td>
                      </tr>
@@ -689,12 +689,12 @@
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
-                        <td>-15</td>
-                        <td>4</td>
-                        <td>65</td>
+                        <td>-14</td>
+                        <td>3</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
+                        <td>8</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                      <tr>
@@ -702,11 +702,11 @@
                         <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>4</td>
-                        <td>65</td>
+                        <td>3</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
+                        <td>8</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                   </tbody>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-14",
-                 "-15",
+                 "-14",
                  "-16"
                ]
              },
@@ -806,8 +806,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "4",
-                 "4"
+                 "3",
+                 "3"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "65",
-                 "65"
+                 "62",
+                 "61",
+                 "62"
                ]
              },
              {
