--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 04:05:02 2018</p>
+         Last Run: Sat Nov  3 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>81</td>
                         <td>0</td>
                         <td>8</td>
@@ -45,24 +45,24 @@
                         <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>5</td>
+                        <td>2</td>
                         <td>68</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>66</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>3</td>
-                        <td>59</td>
+                        <td>2</td>
+                        <td>61</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "5",
-                 "3"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "81",
                  "68",
-                 "59"
+                 "61"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "66",
-                 "60"
+                 "69",
+                 "59"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 04:05:02 2018</p>
+         Last Run: Sat Nov  3 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,14 +247,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>7</td>
-                        <td>4</td>
-                        <td>51</td>
-                        <td>61</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>47</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>97</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,23 +262,23 @@
                         <td>8</td>
                         <td>6</td>
                         <td>39</td>
-                        <td>59</td>
+                        <td>49</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NW</td>
-                        <td>87</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
                         <td>7</td>
-                        <td>53</td>
+                        <td>46</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>NNW</td>
-                        <td>81</td>
+                        <td>13</td>
+                        <td>NW</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +305,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "4",
+                 "6",
                  "6",
                  "9"
                ]
@@ -316,7 +317,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "7",
+                 "8",
                  "8",
                  "9"
                ]
@@ -375,7 +376,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "51",
+                 "47",
                  "39",
                  "7"
                ]
@@ -386,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "59",
-                 "53"
+                 "54",
+                 "49",
+                 "46"
                ]
              },
              {
@@ -397,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "87",
-                 "81"
+                 "89",
+                 "76",
+                 "69"
                ]
              }
            ]
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 04:05:02 2018</p>
+         Last Run: Sat Nov  3 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,24 +464,24 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>22</td>
-                        <td>76</td>
+                        <td>21</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>95</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>21</td>
-                        <td>76</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>20</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>96</td>
+                        <td>ENE</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +489,11 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>20</td>
-                        <td>77</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>97</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +521,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-7",
+                 "-9",
                  "-8"
                ]
              },
@@ -532,7 +533,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-4",
-                 "-4",
+                 "-5",
                  "-5"
                ]
              }
@@ -590,8 +591,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "22",
                  "21",
+                 "20",
                  "20"
                ]
              },
@@ -601,9 +602,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "76",
-                 "77"
+                 "74",
+                 "74",
+                 "75"
                ]
              },
              {
@@ -612,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
-                 "96",
-                 "97"
+                 "94",
+                 "94",
+                 "94"
                ]
              }
            ]
@@ -654,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 04:05:02 2018</p>
+         Last Run: Sat Nov  3 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
